--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,11 @@
 {
     "name": "challenges/ch-template-algorithmic-php",
     "description": "Template challenge for algorithmic projects written in PHP.",
-    "keywords": ["challenge", "algorithm", "PHP"],
+    "keywords": [
+        "challenge",
+        "algorithm",
+        "PHP"
+    ],
     "license": "MIT",
     "type": "project",
     "authors": [
@@ -12,10 +16,10 @@
         }
     ],
     "require": {
-        "php": ">=5.6"
+        "php": "^7.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "~5.7"
+        "phpunit/phpunit": "^9.5"
     },
     "autoload": {
         "psr-4": {
